        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Wrap `fs.realpath.native` when configured with `asyncHooks=false`. This
  fixes using that function (which was undefined before this fix) and a
  crash when importing fs-extra@10. ({issues}2401[#2401])

* A significant change was made to internal run context tracking (a.k.a. async
  context tracking). There are no configuration changes or API changes for
  custom instrumentation. ({pull}2181[#2181])
+
One behavior change is that multiple spans created synchronously (in the same
async task) will form parent/child relationships; before this change they would
all be siblings. This fixes HTTP child spans of Elasticsearch and aws-sdk
automatic spans to properly be children. ({issues}1889[#1889])
+
Another behavior change is that a span B started after having ended span A in
the same async task will *no longer* be a child of span A. ({pull}1964[#1964])
+
This fixes an issue with context binding of EventEmitters, where
`removeListener` would fail to actually remove if the same handler function was
added to multiple events.


[[release-notes-3.23.0]]
==== 3.23.0 2021/10/25

[float]
===== Breaking changes

* Remove support for instrumenting versions of fastify earlier than 1.0.0.
  This instrumentation might still work, but is no longer supported.
  Fastify v1.0.0 was released in 2018. All current users should be using
  fastify v2 or v3 at least. See https://www.fastify.io/docs/latest/LTS/
  ({pull}2387[#2387])

[float]
===== Features

* Add initial support for version 8 of `@elastic/elasticsearch`, which is
  still in pre-release. ({pull}2385[#2385])

